# cmd/api/docs/swagger.yaml
@@ -39,7 +39,7 @@ paths:
   /confirm/{token}:
     get:
       description: Confirms a subscription using the token sent in the confirmation
-        email.
+        email_service.
       parameters:
       - description: Confirmation token
         in: path
@@ -61,19 +61,19 @@ paths:
           description: Token not found
           schema:
             type: string
-      summary: Confirm email subscription
+      summary: Confirm email_service subscription
       tags:
       - subscription
   /subscribe:
     post:
       consumes:
       - application/x-www-form-urlencoded
-      description: Subscribes an email to weather updates for a specific city with
+      description: Subscribes an email_service to weather updates for a specific city with
         the given frequency.
       parameters:
       - description: Email address to subscribe
         in: formData
-        name: email
+        name: email_service
         required: true
         type: string
       - description: City for weather updates
@@ -93,7 +93,7 @@ paths:
       - text/plain
       responses:
         "200":
-          description: Subscription successful. Confirmation email sent.
+          description: Subscription successful. Confirmation email_service sent.
           schema:
             $ref: '#/definitions/internal_server_handlers_subscription.Subscription'
         "400":
@@ -113,7 +113,7 @@ paths:
       - subscription
   /unsubscribe/{token}:
     get:
-      description: Unsubscribes an email from weather updates using the token sent
+      description: Unsubscribes an email_service from weather updates using the token sent
         in emails.
       parameters:
       - description: Unsubscribe token
