# internal/infrastructure/repository/subscription.go
@@ -32,7 +32,7 @@ func (r *SubscriptionRepository) CheckConfirmation(
 	const query = `
 		SELECT confirmed
 		FROM weather_subscriptions
-		WHERE email = $1 AND city = $2
+		WHERE email_service = $1 AND city = $2
 	`
 	row := r.db.QueryRowContext(ctx, query, subscriptionRequest.Email, subscriptionRequest.City)
 	err = row.Scan(&confirmed)
@@ -50,7 +50,7 @@ func (r *SubscriptionRepository) CheckConfirmation(
 // нам тут не потрібен (за потреби можна додати RETURNING id і зчитати через QueryRowContext).
 func (r *SubscriptionRepository) Create(ctx context.Context, s *model.Subscription) error {
 	const query = `
-		INSERT INTO weather_subscriptions (email, city, token, frequency, confirmed, created_at)
+		INSERT INTO weather_subscriptions (email_service, city, token, frequency, confirmed, created_at)
 		VALUES ($1,   $2,   $3,    $4,       FALSE,     NOW())
 	`
 	_, err := r.db.ExecContext(ctx, query, s.Email, s.City, s.Token, s.Frequency)
@@ -63,7 +63,7 @@ func (r *SubscriptionRepository) UpdateTokenByEmailCity(ctx context.Context, s *
 	const query = `
 		UPDATE weather_subscriptions
 		SET token = $1, confirmed = FALSE, created_at = NOW()
-		WHERE email = $2 AND city = $3
+		WHERE email_service = $2 AND city = $3
 	`
 	res, err := r.db.ExecContext(ctx, query, s.Token, s.Email, s.City)
 	if err != nil {
@@ -80,7 +80,7 @@ func (r *SubscriptionRepository) UpdateTokenByEmailCity(ctx context.Context, s *
 // GetByToken повертає id та повну підписку за токеном.
 func (r *SubscriptionRepository) GetByToken(ctx context.Context, token string) (string, *model.Subscription, error) {
 	const query = `
-		SELECT id, email, city, frequency, confirmed
+		SELECT id, email_service, city, frequency, confirmed
 		FROM weather_subscriptions
 		WHERE token = $1
 	`
@@ -146,10 +146,10 @@ func (r *SubscriptionRepository) DeleteByToken(ctx context.Context, token string
 // ListConfirmed повертає всі підтверджені підписки — зручно для шедулера.
 func (r *SubscriptionRepository) ListConfirmed(ctx context.Context) ([]*model.Subscription, error) {
 	const query = `
-		SELECT email, city, frequency, token, confirmed
+		SELECT email_service, city, frequency, token, confirmed
 		FROM weather_subscriptions
 		WHERE confirmed = TRUE
-		ORDER BY email, city
+		ORDER BY email_service, city
 	`
 	rows, err := r.db.QueryContext(ctx, query)
 	if err != nil {
